[package]
name = "cita-jsonrpc-interfaces"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"

[dependencies]
jsonrpc-sdk-prelude = { git = "https://github.com/yangby-cryptape/rust-jsonrpc-sdk", branch = "master" }
jsonrpc-types = { git = "https://github.com/cryptape/cita-common", rev = "ae5b7c9" }
